--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "tachyons": "^4.12.0",
+    "tachyons-cli": "^1.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
