Changes to components for streamlining

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "css": "tachyons src/css/app.css > src/index.css --minify",
+    "css": "tachyons src/css/app.css",
     "prestart": "npm run css",
     "prebuild": "npm run css"
   },
