--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^5.0.0-alpha.24",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -10,18 +14,13 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-scroll-section": "^3.0.2",
-    "tachyons": "^4.12.0",
-    "tachyons-cli": "^1.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "css": "tachyons src/css/app.css",
-    "prestart": "npm run css",
-    "prebuild": "npm run css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
